--- a/assets/css/style-green.css
+++ b/assets/css/style-green.css
@@ -18,7 +18,7 @@
 GOOGLE FONT
 ============================================================ */
 
-@import url(http://fonts.googleapis.com/css?family=Ubuntu); /* FREE GOOGLE FONT */
+/*@import url(http://fonts.googleapis.com/css?family=Ubuntu); /* FREE GOOGLE FONT */
 @import url(http://fonts.googleapis.com/css?family=Oswald); /* FREE GOOGLE FONT */
 
 
