--- a/assets/css/cocomo2st.css
+++ b/assets/css/cocomo2st.css
@@ -79,7 +79,7 @@
     border-color: #fff;
     color:#000;
     position: relative;
-    top: 40px;
+    top: 80px;
 }
 /*Відстань поля тексту від заголовку */
 .b-page-main
@@ -180,29 +180,30 @@
 .b-page-questions__answers
 {
     font-size: 16;
-    height: 250px;
-    width: 297px;
-    padding: 10px;
+    height: 220px;
+    width: 324px;
+    padding: 2px;
     background-color: #fff;
     overflow-y: auto;
     position: absolute;
-    top: 110px;
+    top: 210px;
 }
 
 .b-page-questions__answers-item
 {
     margin-left: 7px;
     margin-top: 3px;
+    color: darkgray;
 }
 
 .b-page-questions__current
 {
-    width: 300px;
-    height: 60px;
+    width: 324px;
+    height: 65px;
     margin-top: 10px;
     margin-bottom: 8px;
     padding: 4px;
-    font-size: 15px;
+    font-size: 14px;
     color: black;
     background-color: #fff;
     position: absolute;
@@ -215,7 +216,7 @@
     height: 20px;
     padding: 5px;
     position: absolute;
-    top: 427px;
+    top: 435px;
     left: 200px;
     font-size: 16px;
     color: black;
